0.17.0 - 2015-06-??
--------------------------------------------------------------------



0.16.1 - 2015-06-03
--------------------------------------------------------------------

    * asock/client moved to own package, aclient


0.16.0 - 2015-06-03
--------------------------------------------------------------------

  Breaking changes

      * Config.TLSConfig no longer exists. It is once again an
        argument of asock.NewTLS().

      * asock.NewUnix() has a new argument, which is the Unix
        permissions to set on the socket.

      * Aclient constructors now take a single argument, a Config
        struct, as the Asock constructors do.

      * client.Config has a new `EOM` field, which behaves identically
        to the asock.Config field of the same name, described below.

      * The Msg generated by a.Quit being invoked (code 199) is now
        sent regardless of Msglvl setting.

      * There is a new Msg, code 401, for a null request.

  Additions and other changes

      * The asock.Config struct has a new field, `EOM`, which sets the
        end-of-message marker (defaults to "\n\n").

      * Network handling is now more correct and robust.

      * Test suite speedups (across 0.16 and 0.15)


0.15.0 - 2015-05-26
--------------------------------------------------------------------

  Breaking changes

      * The `Config` struct has two new fields:

          * Config.Buffer specifies the size of the buffer on the
            Asock.Msgr channel (defaults to 32).

          * Config.TLSConfig is the *tls.Config instance which is
            needed to set up a TLS connection.  This was formerly an
            argument of asock.NewTLS().

      * The `Timeout` field in the `Config` struct is now treated as
        milliseconds instead of seconds.

      * client constructors have a new argument, `timeout`, which sets
        the number of milliseconds before read/write operations
        timeout.

  Additions and other changes
