@@ -8,18 +8,16 @@ import (
 
 // create and destroy an idle asocket instance
 func TestStartStop(t *testing.T) {
-	var d Dispatch
-
 	// fail to instantiate an asocket by using a terrible filename
 	c := Config{Sockname: "zzz/zzz/zzz/zzz", Msglvl: All}
-	as, err := NewUnix(c, d, 700)
+	as, err := NewUnix(c, 700)
 	if err == nil {
 		t.Error("that should have failed, but didn't")
 	}
 
 	// instantiate an asocket
 	c = Config{Sockname: "/tmp/test00.sock", Msglvl: All}
-	as, err = NewUnix(c, d, 700)
+	as, err = NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
