@@ -10,12 +10,9 @@ import (
 
 // implement an echo server
 func TestEchoTCPServer(t *testing.T) {
-	d := make(Dispatch) // create Dispatch
-	d["echo"] = &DispatchFunc{echo, "split"} // and put a function in it
-
 	// instantiate an asocket (failure)
 	c := Config{Sockname: "127.0.0.1:1", Msglvl: All}
-	as, err := NewTCP(c, d)
+	as, err := NewTCP(c)
 	if err == nil {
 		as.Quit()
 		t.Errorf("Tried to listen on an impossible IP, but it worked")
@@ -23,13 +20,25 @@ func TestEchoTCPServer(t *testing.T) {
 
 	// instantiate an asocket
 	c = Config{Sockname: "127.0.0.1:50709", Msglvl: All}
-	as, err = NewTCP(c, d)
+	as, err = NewTCP(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
 	if as.s != "127.0.0.1:50709" {
 		t.Errorf("Socket name should be '127.0.0.1:50709' but got '%v'", as.s)
 	}
+	// load the echo func into the dispatch table
+	err = as.AddHandler("echo", "nosplit", echo)
+	if err != nil {
+		t.Errorf("Couldn't add handler func: %v", err)
+	}
+	if len(as.d) != 1 {
+		t.Errorf("as.d should be len 1, but got %v", len(as.d))
+	}
+	if _, ok := as.d["echo"]; !ok {
+		t.Errorf("Can't find dispatch function 'echo'")
+	}
+
 	// launch echoclient. we should get a message about the
 	// connection.
 	go echoTCPclient(as.s, t)
@@ -87,17 +96,22 @@ func TestEchoTCPServer(t *testing.T) {
 
 // now do it in ipv6
 func TestEchoTCP6Server(t *testing.T) {
-	d := make(Dispatch) // create Dispatch
-	d["echo"] = &DispatchFunc{echo, "split"} // and put a function in it
 	// instantiate an asocket
 	c := Config{Sockname: "[::1]:50709", Msglvl: All}
-	as, err := NewTCP(c, d)
+	as, err := NewTCP(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
 	if as.s != "[::1]:50709" {
 		t.Errorf("Socket name should be '[::1]:50709' but got '%v'", as.s)
 	}
+	// load the echo func into the dispatch table, with argmode of
+	// split this time
+	err = as.AddHandler("echo", "split", echo)
+	if err != nil {
+		t.Errorf("Couldn't add handler func: %v", err)
+	}
+
 	// launch echoclient. we should get a message about the
 	// connection.
 	go echoTCPclient(as.s, t)
