@@ -10,7 +10,7 @@ import (
 
 func TestMsgError(t *testing.T) {
 	c := Config{Sockname: "/tmp/test13.sock", Msglvl: All}
-	as, err := NewUnix(c, nil, 700)
+	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
