@@ -19,7 +19,7 @@ const (
 	Conn
 	Error
 	Fatal
-	Version = "0.16.1"
+	Version = "0.17.0"
 )
 
 // Asock is a handle on an asock instance. It contains the
@@ -31,11 +31,78 @@ type Asock struct {
 	w    *sync.WaitGroup
 	s    string       // socket name
 	l    net.Listener // listener socket
-	d    Dispatch     // dispatch table
+	d    dispatch     // dispatch table
 	t    int64        // timeout
 	ml   int          // message level
 	eom  []byte       // end-of-message
 	help string       // bad command help
+}
+
+// AddHandler adds a dispatch (handler) function to the Asock
+// instance.
+func (a *Asock) AddHandler(name string, argmode string, df DispatchFunc) error {
+	if _, ok := a.d[name]; ok {
+		return fmt.Errorf("dispatch function '%v' already exists", name)
+	}
+	if argmode != "split" && argmode != "nosplit" {
+		return fmt.Errorf("invalid argmode '%v'", argmode)
+	}
+	a.d[name] = &dispatchFunc{df, argmode}
+	a.help = ""
+	for cmd := range a.d {
+		a.help = a.help + cmd + " "
+	}
+	return nil
+}
+
+// genMsg creates messages and sends them to the Msgr channel.
+func (a *Asock) genMsg(conn, req uint, code, ml int, txt string, err error) {
+	// if this message's level is below the instance's level, don't
+	// generate the message
+	if ml < a.ml {
+		return
+	}
+	select {
+	case a.Msgr <- &Msg{conn, req, code, txt, err}:
+	default:
+	}
+}
+
+// Quit handles shutdown and cleanup for an asock instance,
+// including waiting for any connections to terminate. When it
+// returns, the Asock is fully shut down. See the package Overview
+// for more info.
+func (a *Asock) Quit() {
+	a.q <- true
+	a.l.Close()
+	a.w.Wait()
+	close(a.q)
+	close(a.Msgr)
+}
+
+// Msg is the format which asock uses to communicate informational
+// messages and errors to its host program. See the package Overview
+// for more info.
+type Msg struct {
+	Conn uint   // connection id
+	Req  uint   // connection request number
+	Code int    // numeric status code
+	Txt  string // textual description of Msg
+	Err  error  // error (if any) passed along from underlying condition
+}
+
+// Error implements the error interface, returning a nicely (if
+// blandly) formatted string containing all information present in a
+// given Msg.
+func (m *Msg) Error() string {
+	s := fmt.Sprintf("conn %d req %d status %d", m.Conn, m.Req, m.Code)
+	if m.Txt != "" {
+		s = s + fmt.Sprintf(" (%s)", m.Txt)
+	}
+	if m.Err != nil {
+		s = s + fmt.Sprintf("; err: %s", m.Err)
+	}
+	return s
 }
 
 // Config holds values to be passed to the constuctor.
@@ -67,16 +134,19 @@ type Config struct {
 	Msglvl int
 }
 
-// Dispatch is the dispatch table which drives asock's behavior. See
+// dispatch is the dispatch table which drives asock's behavior. See
 // the package Overview for more info on this and DispatchFunc.
-type Dispatch map[string]*DispatchFunc
+type dispatch map[string]*dispatchFunc
 
 // DispatchFunc instances are the functions called via Dispatch.
-type DispatchFunc struct {
-	// Func is the function to be called.
-	Func    func ([][]byte) ([]byte, error)
+type DispatchFunc func ([][]byte) ([]byte, error)
 
-	// Argmode can be "split" or "nosplit". It determines how the
+// DispatchFunc instances are the functions called via Dispatch.
+type dispatchFunc struct {
+	// df is the function to be called.
+	df DispatchFunc
+
+	// argmode can be "split" or "nosplit". It determines how the
 	// bytestream read from the socket will be turned into arguments
 	// to Func.
 	//
@@ -88,58 +158,33 @@ type DispatchFunc struct {
 	// A fuction with Argmode "split" would get:
 	//
 	//    []byte{[]byte{`foo`}, []byte{`bar baz`}, []byte{`quux`}}
-	Argmode string
-}
-
-// Msg is the format which asock uses to communicate informational
-// messages and errors to its host program. See the package Overview
-// for more info.
-type Msg struct {
-	Conn uint   // connection id
-	Req  uint   // connection request number
-	Code int    // numeric status code
-	Txt  string // textual description of Msg
-	Err  error  // error (if any) passed along from underlying condition
-}
-
-// Error implements the error interface, returning a nicely (if
-// blandly) formatted string containing all information present in a
-// given Msg.
-func (m *Msg) Error() string {
-	s := fmt.Sprintf("conn %d req %d status %d", m.Conn, m.Req, m.Code)
-	if m.Txt != "" {
-		s = s + fmt.Sprintf(" (%s)", m.Txt)
-	}
-	if m.Err != nil {
-		s = s + fmt.Sprintf("; err: %s", m.Err)
-	}
-	return s
+	argmode string
 }
 
 // NewTCP returns an instance of Asock which uses TCP networking.
-func NewTCP(c Config, d Dispatch) (*Asock, error) {
+func NewTCP(c Config) (*Asock, error) {
 	tcpaddr, err := net.ResolveTCPAddr("tcp", c.Sockname)
 	l, err := net.ListenTCP("tcp", tcpaddr)
 	if err != nil {
 		return nil, err
 	}
-	return commonNew(c, d, l), nil
+	return commonNew(c, l), nil
 }
 
 // NewTLS returns an instance of Asock which uses TCP networking,
 // secured with TLS.
-func NewTLS(c Config, d Dispatch, t *tls.Config) (*Asock, error) {
+func NewTLS(c Config, t *tls.Config) (*Asock, error) {
 	l, err := tls.Listen("tcp", c.Sockname, t)
 	if err != nil {
 		return nil, err
 	}
-	return commonNew(c, d, l), nil
+	return commonNew(c, l), nil
 }
 
 // NewUnix returns an instance of Asock which uses Unix domain
 // networking. Argument `p` is the Unix permissions to set on the
 // socket (e.g. 770)
-func NewUnix(c Config, d Dispatch, p uint32) (*Asock, error) {
+func NewUnix(c Config, p uint32) (*Asock, error) {
 	l, err := net.ListenUnix("unix", &net.UnixAddr{Name: c.Sockname, Net: "unix"})
 	if err != nil {
 		return nil, err
@@ -148,12 +193,12 @@ func NewUnix(c Config, d Dispatch, p uint32) (*Asock, error) {
 	if err != nil {
 		return nil, err
 	}
-	return commonNew(c, d, l), nil
+	return commonNew(c, l), nil
 }
 
 // commonNew does shared setup work for the constructors (mostly so
 // that changes to Asock don't have to be mirrored)
-func commonNew(c Config, d Dispatch, l net.Listener) *Asock {
+func commonNew(c Config, l net.Listener) *Asock {
 	// spawn a WaitGroup and add one to it for a.sockAccept()
 	var w sync.WaitGroup
 	w.Add(1)
@@ -166,35 +211,7 @@ func commonNew(c Config, d Dispatch, l net.Listener) *Asock {
 		c.EOM = "\n\n"
 	}
 	// create the Asock instance, start listening, and return
-	a := &Asock{make(chan *Msg, c.Buffer), make(chan bool, 1), &w, c.Sockname, l, d, c.Timeout, c.Msglvl, []byte(c.EOM), ""}
-	for cmd := range a.d {
-		a.help = a.help + cmd + " "
-	}
+	a := &Asock{make(chan *Msg, c.Buffer), make(chan bool, 1), &w, c.Sockname, l, make(dispatch), c.Timeout, c.Msglvl, []byte(c.EOM), ""}
 	go a.sockAccept()
 	return a
-}
-
-// genMsg creates messages and sends them to the Msgr channel.
-func (a *Asock) genMsg(conn, req uint, code, ml int, txt string, err error) {
-	// if this message's level is below the instance's level, don't
-	// generate the message
-	if ml < a.ml {
-		return
-	}
-	select {
-	case a.Msgr <- &Msg{conn, req, code, txt, err}:
-	default:
-	}
-}
-
-// Quit handles shutdown and cleanup for an asock instance,
-// including waiting for any connections to terminate. When it
-// returns, the Asock is fully shut down. See the package Overview
-// for more info.
-func (a *Asock) Quit() {
-	a.q <- true
-	a.l.Close()
-	a.w.Wait()
-	close(a.q)
-	close(a.Msgr)
 }
